--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -1,2 +1,20 @@
-.Dictionary {
+.Dictionary section {
+  background-color: white;
+  padding: 30px;
+  border-radius: 6px;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 7%);
+  margin: 20px 0;
+}
+
+.Dictionary input {
+  width: 100%;
+  padding: 6px 10px;
+  color: #333;
+  border: 1px solid #ddd;
+  border-radius: 6px;
+}
+
+.Dictionary .hint {
+  font-size: 11px;
+  margin-top: 5px;
 }
