updated the styling with css

--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,20 @@
 body {
   background: #f9f8fe;
+  font-family: "Cutive Mono", monospace;
 }
 
 a {
-  color: #9670f4;
+  color: black;
+  text-decoration: none;
+  font-weight: bold;
 }
 
 .App-header {
   margin: 30px;
 }
 
-.App-logo {
-  max-width: 400px;
-  display: block;
-  margin: 0 auto;
+.HeaderTitle {
+  font-family: "BhuTuka Expanded One", cursive;
+  text-align: center;
+  font-weight: bold;
 }
