--- a/src/Phonetic.css
+++ b/src/Phonetic.css
@@ -8,14 +8,14 @@
   text-decoration: none;
   margin-right: 10px;
   padding: 10px 20px;
-  border-radius: 20px;
+  border-radius: 10px;
   font-size: 12px;
   font-weight: bold;
   transition: all 150ms ease-in-out;
 }
 
 .Phonetic a:hover {
-  background-color: #9670f4;
+  background-color: black;
   color: white;
 }
 
